--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>포춘쿠키 운세 사이트</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div id = "container">
+        <div id = "name-modal">
+            <h3> 이름을 입력해주세요</h3>
+            <input type="text" name = "" id = "username">
+            <input type="button" value = "확인">
+        </div>
+        <div id="content">
+            <div class = "greeting">
+                <h2><span id = "name"></span>님 환영합니다.</h2>
+                <h2> 오늘의 운세를 확인하기 위해 포춘쿠키를 선택해주세요.</h2>
+            </div>
+            <!--포춘쿠키 이미지 넣기-->
+            <!--포춘쿠키 운세 결과 포여주기-->
+        </div>
+    </div>
 </body>
 </html>
